# pulsar

./: .gitignore  README.md  RESEARCH.md  pyproject.toml  requirements.txt
analysis/: aggregate.py  plot.py
configs/: cifar10_ann.yaml  cifar10_ann_to_snn.yaml  cifar10_bnn.yaml  cifar10_pulsar.yaml  cifar10_snn.yaml  fashion_ann.yaml  fashion_ann_to_snn.yaml  fashion_bnn.yaml  fashion_pulsar.yaml  fashion_snn.yaml  mnist_ann.yaml  mnist_ann_to_snn.yaml  mnist_bnn.yaml  mnist_pulsar.yaml  mnist_snn.yaml  shd_ann.yaml  shd_ann_to_snn.yaml  shd_bnn.yaml  shd_pulsar.yaml  shd_snn.yaml
configs/_quicktest/: shd_ann_quick.yaml  shd_pulsar_quick.yaml  shd_snn_quick.yaml
experiments/: quick.py  run_experiment.py
scripts/: run_all.sh
src/pulsar/: __init__.py
src/pulsar/coding/: __init__.py  decoder.py  encoder.py
src/pulsar/layers/: __init__.py  binary.py  lif.py  membrane_norm.py  pulse_layer.py  sew_residual.py
src/pulsar/models/: __init__.py  ann_baseline.py  ann_to_snn.py  bnn_baseline.py  pulsar_v1.py  snn_baseline.py
src/pulsar/train/: __init__.py  annealing.py  metrics.py  seeding.py  trainer.py
tests/: test_e2e_mnist.py  test_e2e_shd.py  test_smoke.py
