[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulsar"
version = "0.1.0"
description = "Rethinking spiking neural networks from the ground up."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "G-reen-vibe"}]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.6",
    "h5py>=3.8",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["src"]
